--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "aws-sdk": "^2.1311.0",
+    "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -11,9 +12,11 @@
     "formidable": "^2.1.1",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.9",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "request": "^2.88.2",
     "uuid": "^9.0.0"
   },
   "name": "server",
